# lobbyist2wikidata

./: .gitignore  README.md  llm.py  pyproject.toml  run.py  swedish_lobbyist.goggle  wikidata.py
models/: information.py  role.py  swedish_political_party.py
sources/: diplomat.py  downtown_advisors.py  kreab.py  lumo_advice.py  nordic_public_affairs.py  paues_aberg.py  rud_pedersen.py
