[project]
name = "lobbyist2wikidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pyyaml",
    "openai",
    "pandas",
    "openpyxl",
    "dotenv",
    "pydantic",
    "google-genai",
]
[tool.setuptools.packages]
find = {}

[tool.uv.workspace]
members = [
    "mcp-server-demo",
]
[tool.setuptools]
py-modules = ["scraper"]
